--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,10 @@ plugins {
 
 android {
     compileSdkVersion 30
-
     defaultConfig {
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }
         applicationId "com.example.fitfilereader"
         minSdkVersion 23
         targetSdkVersion 30
@@ -35,4 +37,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Room components
+    implementation("androidx.room:room-runtime:$roomVersion")
+    annotationProcessor("androidx.room:room-compiler:$roomVersion")
 }
