--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        roomVersion = '2.3.0'
+    }
     repositories {
         google()
         mavenCentral()
