--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitFileReader">
-        <activity android:name=".TrainingActivity"></activity>
         <activity
             android:name=".HomeActivity"
             android:screenOrientation="portrait">
@@ -24,6 +23,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TrainingActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ProgresActivity"
